# AES

aes-main/: .gitignore  CMakeLists.txt  sdkconfig.defaults
aes-main/components/algo/: CMakeLists.txt  algo.c  border_recoil.c  comp_iir_filter.c  data_receive.c  desired_heading.c  final_heading.c  goal_heading.c  hall.c  heading_imu.c  heading_odometry.c  hp_iir_filter.c  lp_fir_filter.c  lp_iir_filter.c  obstacle_avoidance.c  photo_encoder.c  position.c
aes-main/components/algo/include/: algo.h  border_recoil.h  comp_iir_filter.h  data_receive.h  desired_heading.h  final_heading.h  goal_heading.h  hall.h  heading_imu.h  heading_odometry.h  hp_iir_filter.h  lp_fir_filter.h  lp_iir_filter.h  obstacle_avoidance.h  photo_encoder.h  position.h  robot_constants.h
aes-main/components/algo/priv-include/: data_receive.h
aes-main/components/app-manager/: CMakeLists.txt  app_manager.c
aes-main/components/app-manager/include/: app_manager.h
aes-main/components/app_manager/: CMakeLists.txt  app_manager.c  app_manager.h  tasks.c
aes-main/components/ble/: CMakeLists.txt  ble.c
aes-main/components/ble/include/: ble.h  (+1 more)
aes-main/components/calc-utils/: CMakeLists.txt  calc_utils.c
aes-main/components/hc-sr04/: CMakeLists.txt  hc_sr04.c
aes-main/components/i2c/: CMakeLists.txt  Kconfig  i2c.c
aes-main/components/md-driver/: CMakeLists.txt  Kconfig  inv_mpu.c  inv_mpu_dmp_motion_driver.c
aes-main/components/motion-driver/: CMakeLists.txt  esp_port.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c
aes-main/components/motion-driver/include/: esp_port.h  inv_mpu.h
aes-main/components/motor/: CMakeLists.txt  motor.c  motor_constants.c
aes-main/components/mpu9255/: CMakeLists.txt  mpu9255.c
aes-main/components/reflectance/: CMakeLists.txt  reflectance.c
aes-main/components/task-utils/: CMakeLists.txt  task_utils.c
aes-main/components/us/: CMakeLists.txt  us.c
aes-main/main/: CMakeLists.txt  main.c  main_mpu_bias.c  main_mpu_test.c  main_us_test.c
aes-python-controller/: .gitignore  app_manager.py  behaviour.py  ble.py  ble_tests.py  buttons.py  connection_status.py  constants.py  heading.py  main.py  radar.py  requirements.txt  timestamp.py  title.py
(+13 files in other folders)
